<resources>
    // GENERAL //
    <string name="app_name">revzen</string>
    <string name="login_button_text">Login</string>

    // LOGIN ACTIVITIES //
    <string name="revzen_welcome_text">Welcome to revzen</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="revzen_welcome_image_desc">Zenny</string>




    // MENU ACTIVITY //
    <string name="start_session_button">Start Session</string>
    <string name="dashboard_title">Dashboard</string>

    <string name="calendar_description">Calendar</string>
    <string name="friends_description">Friends</string>
    <string name="trophy_description">Trophies</string>
    <string name="pet_description">Your trusty pal</string>
    <string name="friend_code">Friend Code:</string>
    <string name="change_pet">Change Pet</string>

    <string name="break_notification">Break Notification</string>
    <string name="break_description">Notifies when your break is ending</string>


    // PET SELECT ACTIVITY //
    <string name="pet_select_title">Choose your pet!</string>

    // SETUP ACTIVITY //
    <string name="setup_title">Select your Study Plan</string>
    <string name="study_length_title">Study Length</string>
    <string name="break_length_title">Break Length</string>
    <string name="recent_title">Recent</string>
    <string name="start_study_button">Go</string>
    <string name="studySpinner_contentDesc">Study Length options</string>
    <string name="breakSpinner_contentDesc">Break Length options</string>

    <string name="session_title">Keep Studying!</string>
    <string name="end_session_button">End Session</string>

    <string name="break_title">Take a Break!</string>
    <string name="keep_studying_button">Continue Studying</string>
    <string name="break_button">Break!</string>
    <string name="warning_title1">Ending a session early or leaving the app will hurt your pet!</string>
    <string name="warning_title2">You should take a break. If you wait too long, your session will end due to inactivity!</string>
    <string name="break_warning">Your break is up. You should return to studying now or end session and collect your rewards!</string>

    <string name="fail_title1">Oh no!</string>
    <string name="fail_title2">You broke your study session</string>
    <string name="summary_button">OK</string>

    <string name="summary_title">Summary</string>
    <string name="summary_xp">Gained XP:</string>
    <string name="summary_total_study">Total time studied:</string>
    <string name="summary_total_break">Total time on break:</string>
    <string name="summary_ratio">Study:Break ratio:</string>

    <string name="sample_text">Lorem Ipsum</string>


    <string name="revzen_menu_social">Live Revision</string>
    <string name="revzen_history_menu">Study History</string>
    <string name="revzen_account_menu">Account Settings</string>
    <string name="subject_id_text">Enter Subject ID</string>
    <string name="login_failure_no_such_user">There is not an account for this user</string>
    <string name="login_failure_outdated_api">App out of date, too old for API</string>
    <string name="login_failure_unspecified_api_error">Something went wrong</string>
    <string name="create_account_enter_subject">Enter Subject ID</string>
    <string name="create_account_enter_username">Enter username</string>
    <string name="create_account_user_exists">You appear to have previously created an account (same subject id)</string>
    <string name="create_account_button">Create Account</string>
    <string name="follow_screen_followers">followers</string>
    <string name="follow_screen_following">following</string>
    <string name="follow_screen_requests">requests</string>
    <string name="follow_screen_requested">requested</string>
    <string name="menu_follow_screen">Social</string>
    <string name="follow_screen_new_friend">Get New Friends!</string>
    <string name="follow_request_screen_instructions">To send a follow request to a new friend, simply type their friendcode!</string>
    <string name="follow_request_screen_button_prompt">Send Request</string>
    <string name="follow_request_screen_number_pad">Friendcode here!</string>
</resources>