<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/startSessionButton"
        android:layout_width="162dp"
        android:layout_height="139dp"
        android:layout_marginEnd="32dp"
        android:onClick="goToSessionSetup"
        android:text="@string/start_session_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainMenuPetImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainMenuPetImage"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/mainMenuPetImage"
        android:layout_width="150dp"
        android:layout_height="153dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:clickable="true"
        android:contentDescription="@string/pet_description"
        android:onClick="goToPetSelect"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoView"
        app:srcCompat="@drawable/petlogo_shiba" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="66dp"
        android:layout_marginTop="28dp"
        android:onClick="goToRevisionHistory"
        android:text="@string/revzen_history_menu"
        app:layout_constraintEnd_toEndOf="@+id/menu_live_study2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/menu_live_study2"
        app:layout_constraintTop_toBottomOf="@+id/menu_live_study2" />

    <Button
        android:id="@+id/menu_live_study"
        android:layout_width="300dp"
        android:layout_height="66dp"
        android:layout_marginTop="48dp"
        android:onClick="goToLiveRevision"
        android:text="@string/revzen_menu_social"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuPetHealth" />

    <Button
        android:id="@+id/menu_live_study2"
        android:layout_width="300dp"
        android:layout_height="66dp"
        android:layout_marginTop="28dp"
        android:onClick="goToFollowScreen"
        android:text="@string/menu_follow_screen"
        app:layout_constraintEnd_toEndOf="@+id/menu_live_study"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/menu_live_study"
        app:layout_constraintTop_toBottomOf="@+id/menu_live_study" />

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="95dp"
        android:layout_height="89dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/menu_friendcode"
        android:layout_width="90dp"
        android:layout_height="39dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu_username"
        app:layout_constraintTop_toBottomOf="@+id/menu_friendcode2" />

    <TextView
        android:id="@+id/menu_friendcode2"
        android:layout_width="90dp"
        android:layout_height="21dp"
        android:layout_marginTop="32dp"
        android:text="@string/friend_code"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu_username"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu_friendcode3"
        android:layout_width="90dp"
        android:layout_height="21dp"
        android:gravity="center"
        android:text="@string/change_pet"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/mainMenuPetImage"
        app:layout_constraintEnd_toEndOf="@+id/mainMenuPetImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/mainMenuPetImage" />

    <TextView
        android:id="@+id/menu_username"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/menu_friendcode"
        app:layout_constraintEnd_toStartOf="@+id/menu_friendcode"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/logoView" />

    <ImageView
        android:id="@+id/mainMenuPetHealth"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/mainMenuPetXP"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/mainMenuPetImage"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuPetImage"
        app:srcCompat="@drawable/heart3" />

    <TextView
        android:id="@+id/mainMenuPetXP"
        android:layout_width="49dp"
        android:layout_height="34dp"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mainMenuPetHealth"
        app:layout_constraintEnd_toEndOf="@+id/mainMenuPetImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mainMenuPetHealth"
        app:layout_constraintTop_toTopOf="@+id/mainMenuPetHealth" />

</androidx.constraintlayout.widget.ConstraintLayout>