<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FollowRequestActivity">

    <EditText
        android:id="@+id/enterFriendCodeEditText"
        android:layout_width="294dp"
        android:layout_height="50dp"
        android:autofillHints="@string/follow_request_screen_instructions"
        android:ems="10"
        android:hint="@string/follow_request_screen_number_pad"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/followRequestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/followRequestTextView" />

    <TextView
        android:id="@+id/followRequestTextView"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:text="@string/follow_request_screen_instructions"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/enterFriendCodeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/followRequestButton"
        android:layout_width="216dp"
        android:layout_height="57dp"
        android:onClick="sendRequest"
        android:text="@string/follow_request_screen_button_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterFriendCodeEditText" />

    <ProgressBar
        android:id="@+id/sendRequestProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="131dp"
        android:layout_height="127dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>