<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">

    <TextView
        android:id="@+id/breakLengthTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="124dp"
        android:text="@string/break_length_title"
        android:textAllCaps="true"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studyLengthTitleTextView" />

    <TextView
        android:id="@+id/recentTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="172dp"
        android:text="@string/recent_title"
        android:textAllCaps="true"
        android:textColor="?android:colorSecondary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/startStudyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/setupTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="134dp"
        android:text="@string/setup_title"
        android:textAllCaps="true"
        android:textColor="?android:textColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/studyLengthTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/study_length_title"
        android:textAllCaps="true"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupTitleTextView" />

    <Button
        android:id="@+id/startStudyButton"
        android:layout_width="96dp"
        android:layout_height="68dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="startSessionWithSpinners"
        android:text="@string/start_study_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/studyLengthSpinner"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/study_spinner_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studyLengthTitleTextView" />

    <Spinner
        android:id="@+id/breakLengthSpinner"
        android:layout_width="282dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/break_spinner_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakLengthTitleTextView" />

    <Button
        android:id="@+id/recentStudyButton"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="?android:colorSecondary"
        android:onClick="startSessionWithRecent"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/startStudyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>