<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BreakActivity">

    <Button
        android:id="@+id/endBreakSessionButton"
        android:layout_width="166dp"
        android:layout_height="142dp"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="108dp"
        android:onClick="endSession"
        android:text="@string/end_session_button"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/continueStudyButton"
        android:layout_width="166dp"
        android:layout_height="142dp"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="28dp"
        android:onClick="keepStudying"
        android:text="@string/keep_studying_button"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/endBreakSessionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Chronometer
        android:id="@+id/breakTimer"
        android:layout_width="315dp"
        android:layout_height="85dp"
        android:layout_marginTop="80dp"
        android:countDown="true"
        android:format="%s"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakTitleText" />

    <TextView
        android:id="@+id/breakTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="134dp"
        android:text="@string/break_title"
        android:textAllCaps="true"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>